--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,27 @@
 server:
     port: 8085
+
+
+###
+#   Database Settings
+###
+spring:
+  datasource:
+    url: jdbc:h2:mem:examplecraft;DB_CLOSE_DELAY=-1
+    platform: h2
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+
+
+###
+#   H2 Settings
+###
+  h2:
+    console:
+      enabled: true
+      path: /console
