feed endpoint to create and get by user
feed get and post for specific user

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     username: sa
     password:
     driverClassName: org.h2.Driver
+    sql-script-encoding: UTF-8
+    
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
